[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "p2lz"
description = "Private tools i.e. p2lz"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.10.0"
dependencies = [
    "boto3>=1.26.129",
]
dynamic = ["version"]

[tools.setuptools.package-dir]
p2lz = "src/p2lz"

[tool.setuptools_scm]
write_to = "src/p2lz/_version.py"
